--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "sweetalert2": "^9.17.0",
     "vform": "^1.0.1",
     "vue": "^2.5.11",
+    "vue-loading-overlay": "^3.3.2",
     "vue-progressbar": "^0.7.5",
     "vue-router": "^3.3.4"
   },
