--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "compile:sass": "node-sass src/assets/sass/app.scss src/assets/css/style.css -w"
   },
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^21.0.0",
+    "@ckeditor/ckeditor5-vue": "^1.0.1",
     "@peculiar/webcrypto": "^1.1.2",
     "admin-lte": "^3.0.5",
     "axios": "^0.19.2",
@@ -21,7 +23,9 @@
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.27.0",
     "node-sass": "^4.14.1",
+    "nodemailer": "^6.4.11",
     "popper.js": "^1.16.1",
+    "save": "^2.4.0",
     "sweetalert2": "^9.17.0",
     "vform": "^1.0.1",
     "vue": "^2.5.11",
